--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,5 @@
 main:
   - title: Quick-Start Guide
     url: 'https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/'
-  - title: lorem-ipsum
+  - title: Blog
     url: lorem-ipsum
