navigation.yml: Multiple updates: * updated main * updated url in main

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,3 +2,6 @@ main:
   - title: Quick-Start Guide
     url: 'https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/'
   - title: Blog
+    url: '#'
+  - title: lorem-ipsum
+    url: lorem-ipsum
