_config.yml: changed

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 minimal_mistakes_skin: default
 locale: en-US
-title: Site Title
+title: Billy's Bicuits
 title_separator: '-'
-subtitle: null
+subtitle: Biscuit Baker Billy's Box
 name: Your Name
 description: An amazing website.
 url: ''
