_config.yml: changed

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ locale: en-US
 title: Billy's Bicuits
 title_separator: '-'
 subtitle: Biscuit Baker Billy's Box
-name: Your Name
+name: Billy B
 description: An amazing website.
 url: ''
 baseurl: ''
