_config.yml: changed

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: Billy's Bicuits
 title_separator: '-'
 subtitle: Biscuit Baker Billy's Box
 name: Billy B
-description: An amazing website.
+description: Food to live on
 url: ''
 baseurl: ''
 repository: null
